# adventofcode

./: .gitignore  learnings.md  pyproject.toml  requirements.txt
2019/: day1.ipynb  day2.ipynb  day3.ipynb
2020/: day1.ipynb  day2.ipynb  day3.ipynb  day4.ipynb  day5.ipynb  day7.ipynb  day8.ipynb  day9.ipynb
2021/day4/: ans4.jl  (+1 more)
2022/: Day 22.ipynb  Day 22.py  Day 23.ipynb  Day 23.py  Day 24.ipynb  Day 24.py  Day 25.ipynb  Day 25.py  day 19.ipynb  day 19.py  day 21.ipynb  day 21.py  day1.ipynb  day1.py  day10.ipynb  day10.py  day11.ipynb  day11.py  day12.ipynb  day12.py  day13.ipynb  day13.py  day14.ipynb  day14.py  day15.ipynb  day15.py  day16.ipynb  day16.py  day17.ipynb  day17.py  day18.ipynb  day18.py  day2.ipynb  day2.py  day20.ipynb  day20.py  day3.ipynb  day3.py  day4.ipynb  day4.py  (+10 more)
2023/: day1.ipynb  day10.ipynb  day11.ipynb  day12.ipynb  day13.ipynb  day14.ipynb  day15.ipynb  day16.ipynb  day17.ipynb  day18.ipynb  day19.ipynb  day2.ipynb  day20.ipynb  day21.ipynb  day22.ipynb  day23.ipynb  day24.ipynb  day25.ipynb  day3.ipynb  day4.ipynb  day5.ipynb  day6.ipynb  day7.ipynb  day8.ipynb  day9.ipynb
2024/: day1.ipynb  day10.ipynb  day11.ipynb  day12.ipynb  day13.ipynb  day14.ipynb  day15.ipynb  day16.ipynb  day17.ipynb  day18.ipynb  day19.ipynb  day2.ipynb  day20.ipynb  day21.ipynb  day22.ipynb  day23.ipynb  day24.ipynb  day25.ipynb  day3.ipynb  day4.ipynb  day5.ipynb  day6.ipynb  day7.ipynb  day8.ipynb  day9.ipynb
2025/: day1.ipynb  day10.ipynb  day2.ipynb  day3.ipynb  day4.ipynb  day5.ipynb  day6.ipynb  day7.ipynb  day8.ipynb  day9.ipynb
day6/: ans6.jl
(+25 files in other folders)
