[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adventofcode"
version = "0.1.0"
description = "Advent of Code solutions"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "advent-of-code-data",
    "plotly",
    "pandas",
    "matplotlib",
    "networkx",
    "ipykernel",
    "jupyter",
]

[tool.setuptools]
packages = ["helpers"]
